--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@haensl/mimetypes",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simple JSON object holding mimetypes.",
   "main": "index.json",
   "scripts": {
     "lint": "eslint '**/*.js'",
     "lint:junit": "eslint --format junit -o test-results/eslint/results.xml '**/*.js'",
-    "prepare": "if [ \"${NODE_ENV}\" != 'production' && -z \"${CI}\" ]; then husky install; fi",
+    "prepare": "if [ \"${NODE_ENV}\" != 'production' ] && [ -z \"${CI}\" ]; then husky install; fi",
     "test": "jest --runInBand --no-cache --colors --passWithNoTests",
     "test:junit": "jest --runInBand --no-cache --ci --reporters='default' --reporters='jest-junit' --passWithNoTests",
     "tdd": "jest --runInBand --colors --watch"
@@ -36,7 +36,7 @@
   "jest-junit": {
     "outputDirectory": "test-results/jest",
     "outputName": "results.xml",
-    "suitName": "@haensl/environments unit tests"
+    "suitName": "@haensl/mimetypes unit tests"
   },
   "repository": {
     "type": "git",
